<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.view.login.LoginViewModel" />
    </data>

<!--    Constraint layout used because we have few components and we have more freedom to align the fields-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        tools:context=".view.login.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="247dp"
            android:contentDescription="@string/shoe_store_logo_description"
            android:src="@drawable/shoe_store_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.username}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pasword"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="1dp"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/login"
            app:layout_constraintEnd_toStartOf="@+id/btnCreateNewAccount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <Button
            android:id="@+id/btnCreateNewAccount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:onClick="@{() -> viewModel.createNewAccount()}"
            android:text="@string/create_new_account"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>